<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.application.submission_android_expert.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <!--suppress AndroidDomInspection, NavigationFile -->
    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.application.submission_android_expert.favorite.FavoriteFragment"
        android:label="@string/fav"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.application.submission_android_expert.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <activity
        android:id="@+id/detail_activity"
        android:name="com.application.submission_android_expert.ui.detail.DetailActivity"
        android:label="activity_detail"
        tools:layout="@layout/activity_detail"/>

</navigation>