<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/background_fragment"
    tools:context=".ui.detail.DetailActivity">

    <FrameLayout
        android:id="@+id/image_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/restaurant_detail_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/restaurant_detail_image"
            tools:src="@tools:sample/avatars"
            tools:layout_width="match_parent"
            tools:layout_height="410dp"/>

        <ImageButton
            style="@style/detail_icon_button_back"
            android:id="@+id/back_to_previous_page"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/baseline_arrow_back_24"
            android:contentDescription="@string/back"/>

        <ImageButton
            style="@style/detail_icon_button_fav"
            android:id="@+id/fav_btn"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/baseline_favorite_24"
            android:layout_gravity="end|top"
            android:contentDescription="@string/fav"/>
    </FrameLayout>

    <TextView
        style="@style/restaurant_detail_title"
        android:id="@+id/restaurant_detail_title"
        tools:text="Bring Your Phone Cafe"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_container"/>

    <TextView
        style="@style/restaurant_rating"
        android:id="@+id/restaurant_detail_rating"
        tools:text="4.2"
        android:layout_marginBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/restaurant_detail_title"
        app:layout_constraintBottom_toBottomOf="@id/restaurant_detail_title"/>

    <TextView
        style="@style/restaurant_location"
        android:id="@+id/restaurant_detail_location"
        android:layout_marginStart="16dp"
        tools:text="Jln. Belimbing Timur No.27, Surabaya"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/restaurant_detail_title"/>

    <LinearLayout
        android:id="@+id/category_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/restaurant_detail_location">

        <TextView
            style="@style/category"
            android:id="@+id/first_category"
            android:paddingVertical="6dp"
            android:paddingHorizontal="18dp"
            tools:text="Modern"/>

        <TextView
            style="@style/category"
            android:id="@+id/second_category"
            android:layout_marginStart="16dp"
            android:paddingVertical="6dp"
            android:paddingHorizontal="18dp"
            tools:text="Italia"/>
    </LinearLayout>

    <TextView
        style="@style/description_label"
        android:id="@+id/description_label"
        android:text="@string/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/category_container"/>

    <TextView
        style="@style/restaurant_detail_description"
        android:id="@+id/restaurant_detail_description"
        android:layout_marginHorizontal="16dp"
        android:justificationMode="inter_word"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description_label"
        tools:text="Lorem Ipsum dolor sit amet Lorem Ipsum dolor sit amet Lorem Ipsum dolor sit amet Lorem Ipsum dolor sit amet Lorem Ipsum dolor sit amet Lorem Ipsum dolor sit amet Lorem Ipsum dolor sit amet Lorem Ipsum dolor sit amet Lorem Ipsum dolor sit amet Lorem Ipsum dolor sit amet"
        tools:targetApi="o" />

    <ProgressBar
        style="?attr/progressBarStyle"
        android:id="@+id/loading_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:visibility="visible"/>

</androidx.constraintlayout.widget.ConstraintLayout>